# QuantPilot-AI-Next

./: .gitignore  README.md  pyproject.toml
docs/: ACCOUNT_PROFILE_BROKER_CONFIG_PREFLIGHT.md  AI_ACTION_PROPOSAL_PAPER_LEDGER_BRIDGE.md  AI_OPEN_SOURCE_PROVIDER_SMALL_SAMPLE_MIXED_ETF_REPLAY.md  ALPHA_FACTOR_FOUNDATION.md  ALPHA_SIZING_ETF_UNIVERSE_TUNING_LOOP.md  ARCHITECTURE_CONSOLIDATION_AFTER_VECTORBT.md  A_SHARE_MARKET_RULES.md  A_SHARE_PAPER_LEDGER_CONSTRAINTS.md  BACKTEST_ENGINE_CANDIDATES.md  BACKTEST_ENGINE_COMPARATIVE_REVIEW.md  BACKTEST_ENGINE_EVALUATION.md  BACKTEST_PROTOTYPE_ISOLATION_PLAN.md  BACKTEST_PROTOTYPE_RESULTS.md  BAOSTOCK_FALLBACK_PROVIDER_SPIKE.md  BROKER_SANDBOX_ADAPTER_PREFLIGHT.md  BROKER_SDK_RESEARCH.md  CAPITAL_AWARE_FAST_COMPOUNDING_MODE.md  CLEANUP_SELF_BUILT_BOUNDARIES_R1.md  CLEANUP_SELF_BUILT_BOUNDARIES_R2.md  CONTROLLED_MOCK_PROVIDER_PROBE_RUN.md  CONTROLLED_OPTIONAL_QLIB_RUNTIME_SPIKE.md  CONTROLLED_PROVIDER_ADAPTER_PROBE_PLAN.md  CONTROLLED_PROVIDER_PROBE_GATE.md  CONTROLLED_PROVIDER_RETRY_PROBE.md  CORE_CONTRACTS.md  COST_AWARE_DEEPSEEK_RUNTIME_ROUTER_PREFLIGHT.md  CURRENT_PROJECT_STATE.md  DAILY_PAPER_TRADING_LOOP_TRADABILITY_METRICS.md  DATA_CONTRACTS.md  DATA_SOURCE_FIELD_MAPPING.md  DATA_SOURCE_PROBE_RESULTS.md  DATA_SOURCE_PROTOTYPE_POLICY.md  DECISIONS.md  DEEPSEEK_MULTI_AGENT_CONTRACT_PREFLIGHT.md  DEPENDENCY_UPDATE_POLICY.md  EXTERNAL_ANALYTICS_PREFLIGHT.md  FACTOR_CANDIDATE_LIBRARY.md  FACTOR_VALIDATION_METRICS.md  FINAL_READINESS_RELEASE_HARDENING.md  FIRST_30_DAYS_PLAN.md  (+71 more)
tests/: __init__.py  conftest.py
(+495 files in other folders)
