[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quantpilot-ai-next"
version = "0.0.1"
description = "Minimal skeleton for QuantPilot-AI 2.0."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
]
vectorbt = [
    "vectorbt==1.0.0",
]
replay = [
    "vectorbt>=0.26,<0.29",
    "pandas>=2,<3",
    "numpy>=1.26,<3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
